--- a/FlaskWebProject/templates/index.html
+++ b/FlaskWebProject/templates/index.html
@@ -10,5 +10,7 @@
 <body>
     <h1>{{ title }}</h1>
     <p> Welcome to python on Azure</p>
+    <p> {{ info }} is part of a token</p>
+    <a href={{ 'map' }}>See the map!</a>
+    
 </body>
-
